# Python_TDD_Demo

./: README.md  pyproject.toml
src/simple_math/: __init__.py  core.py
tests/: test_core.py
