
[tool.poetry]
name = "mini-pytest-tdd"
version = "0.1.0"
description = "A tiny project to practice TDD with pytest (parametrize, raises, approx)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "simple_math", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
